--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "eslint": "^8",
