--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@vercel/analytics": "^1.3.1",
     "firebase": "^10.12.4",
@@ -18,6 +19,7 @@
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
