--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@mui/material": "^5.16.6",
     "@vercel/analytics": "^1.3.1",
     "firebase": "^10.12.4",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "next": "14.2.5",
+    "papaparse": "^5.4.1",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
