--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.3",
     "firebase": "^10.12.4",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "papaparse": "^5.4.1",
     "punycode": "^2.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
+    "react-markdown": "^9.0.1",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
